add class to div in line 24

--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,12 @@
   min-height: 100vh;
   margin: 70px 40px;
   }
+
+  .container {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .title {
+    width: 400px;
+  }
