--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@
 
   .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    margin-bottom: 6.25em !important;
   }
 
   .title {
