--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@
   .title p {
     font-size: 1.125rem;
     width: 25.125em ; /*equal to 450px*/
-    color: var(--Dark-Grayish-Magenta);
+    color: var(--Very-Dark-Magenta);
   }
   .Ratings {
     display: flex;
@@ -99,14 +99,19 @@
     padding: 1em !important;
     display: flex;
     align-items: center;
-
     background-color: var(--Light-Grayish-Magenta);
     border-radius: 12px;
     font-weight: 700;
-    color: var(--Dark-Grayish-Magenta);
+    color: var(--Very-Dark-Magenta);
   }
   .stars {
     display: flex;
+    margin-right: 15px;
+    margin-left: 16px;
+  }
+  .stars img {
+    width: 15px;
+    margin-right: 5px;
   }
 
   .Guru {
