give the code some comments to understand it more

--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@
     overflow: hidden;
   }
   main { 
-  min-height: 100vh;
-  margin: 100px 40px;
+    min-height: 100vh;
+    margin: 100px 40px;
   }
 
   .container {
@@ -70,10 +70,12 @@
     margin-bottom: 3.25em !important;
   }
 
+  /*this determine the width of the title */
   .title {
     width: 400px;
   }
 
+  /*10,000+ of our users love our products.*/
   h1 {
     font-size: 60px;
     line-height: initial;
@@ -82,12 +84,16 @@
     margin-bottom: 0.5em !important;
   }
 
+  /*We only provide great products combined with excellent customer service.
+      See what our satisfied customers are saying about our services.*/
   .title p {
     font-size: 1.125rem;
     width: 25.125em ; /*equal to 450px*/
     color: var(--Dark-Grayish-Magenta);
     font-weight: 500;
   }
+
+  /*container that include the ratings section*/
   .Ratings {
     display: flex;
     flex-direction: column;
@@ -95,6 +101,7 @@
     margin-top: 2.5em;
   }
 
+  /*contains the styles for the rate section*/
   #rate {
     width: 25.125em !important;
     padding: 1em !important;
@@ -105,29 +112,38 @@
     font-weight: 700;
     color: var(--Very-Dark-Magenta);
   }
+
+  /*this for the star divs*/
   .stars {
     display: flex;
     margin-right: 15px;
     margin-left: 16px;
   }
+
   .stars img {
     width: 15px;
     margin-right: 5px;
   }
 
+  /* give margin to rate container to give it like an escalated shape*/
   .Guru {
     margin-left: 2.5em; 
   }
+
+  /* */
   .BestTech {
     margin-left: 5em;
   }
 
+  /* container that include the cards section */
   .Cards {
     display: flex;
     gap: 16px;
     margin-left: 190px !important;
     align-items: flex-start;
   }
+
+  /* containes styles for the users cards */
   .card {
     width: 350px;
     padding: 2em;
@@ -135,32 +151,44 @@
     border-radius: 10px;
   }
 
+  /* containes styles that include name,img,description for the user */
   .user{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
   }
 
-  img {
+  /*deterime the width of the user img*/
+  .user img {
     border-radius: 50%;
     margin-right: 16px;
     width: 40px;
   }
+
+  /* styles for feedbacks of the best users*/
   .Cards p {
     font-weight: 500;
     color: var(--White);
   }
+
+  /*Verified Buyer*/
   span {
     color: var(--Soft-Pink);
     font-weight: 400;
   }
+
+  /* color for the names of users */
   #name {
     color: var(--White);
   }
 
+  /* give margin to card container to give it like an escalated shape*/
   #Irene {
     margin-top: 20px;
   }
+
+  /*give margin to rate container to give it like an escalated shape*/
   #Anne {
     margin-top: 35px;
   }
+
