--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@
     margin-top: 35px;
   }
 
-@media screen  and (max-width: 450px) {
+@media screen  and (max-width: 600px) {
   body {
     background: url(./images/bg-pattern-bottom-mobile.svg) bottom right no-repeat,
     url(./images/bg-pattern-top-mobile.svg) top left no-repeat;
@@ -244,5 +244,71 @@
   }
   #Anne,#Irene {
     margin-top: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  body {
+    background: url(./images/bg-pattern-bottom-mobile.svg) bottom right no-repeat,
+    url(./images/bg-pattern-top-mobile.svg) top left no-repeat;  
+    overflow-y: scroll ;
+  }
+  main {
+    padding: 100px 22px;
+  }
+  .Cards {
+    margin-left: 0px !important;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .title {
+    text-align: center;
+  }
+  h1 {
+    font-size: 50px;
+  }
+  .Cards p {
+    font-size: 1.125em;
+  }
+  .container {
+    margin-bottom: 2.25em !important;
+    flex-direction: column;
+    align-items: center;
+  }
+  #rate {
+    width: 34.125em !important;
+    flex-direction: column;
+  }
+  #Anne,#Irene {
+    margin-top: 0px;
+  }
+  .Guru,.BestTech {
+    margin-left: 0px;
+  }
+  .stars {
+    margin-bottom: 10px;
+  }
+  .user {
+    justify-content: center;
+  }
+  .card {
+    width: 550px;
+  }
+  .title p {
+    font-size: 1.125em;
+  }
+
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1200x) {
+  body {
+    overflow-y: scroll;
+  }
+  main {
+    padding: 45px 40px;
+  }  
+  .Cards {
+    margin-left: 0px !important;
   }
 }
